# cfl-program

./: .gitignore  Anchor.toml  metadata.json  package.json
app/: index.ts
programs/cfl-program/: Cargo.toml
programs/cfl-program/src/: errors.rs  lib.rs  state.rs
programs/cfl-program/src/instructions/: challenge.rs  claim_reward.rs  claim_sol.rs  close_global_account.rs  create_match.rs  create_room.rs  create_squad.rs  create_squad_and_challenge.rs  create_squad_and_match.rs  create_team.rs  finalize.rs  host_claim_sol.rs  initialize.rs  kickoff.rs  mod.rs  update_fee_settings.rs  update_global_settings.rs  update_nft_metadata.rs  winner_claim_sol.rs
tests/: cfl-program.ts
