[package]
name = "meme-league-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meme_league_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version="0.30.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = "0.30.1"
mpl-core = { version = "0.9.1", features = ["anchor"] }
pyth-solana-receiver-sdk = "0.5.0"
mpl-token-metadata = "5.1.0"
